projects/web-mev/src/app/d3/components/hcl/hcl.component.scss
.analysis-card__img {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='1em' height='1em' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 32 32'%3E%3Cpath d='M26 6a3.996 3.996 0 0 0-3.858 3H17.93A7.996 7.996 0 1 0 9 17.93v4.212a4 4 0 1 0 2 0v-4.211a7.951 7.951 0 0 0 3.898-1.62l3.669 3.67A3.953 3.953 0 0 0 18 22a4 4 0 1 0 4-4a3.952 3.952 0 0 0-2.019.567l-3.67-3.67A7.95 7.95 0 0 0 17.932 11h4.211A3.993 3.993 0 1 0 26 6zM12 26a2 2 0 1 1-2-2a2.002 2.002 0 0 1 2 2zm-2-10a6 6 0 1 1 6-6a6.007 6.007 0 0 1-6 6zm14 6a2 2 0 1 1-2-2a2.002 2.002 0 0 1 2 2zm2-10a2 2 0 1 1 2-2a2.002 2.002 0 0 1-2 2z' fill='%2337474f'/%3E%3C/svg%3E");
  background-size: 30px;
  background-position: top center;
  background-repeat: no-repeat;
}

.analysis-card__content {
  padding-top: 1rem;
}

mat-expansion-panel {
  width: 100%;
}

.chart-title {
  color: #37474f;
  text-transform: uppercase;
  text-align: center;
  font-size: 14px;
  font-weight: bold;
  padding: 20px;
}

.chart {
  text-align: center;
}

::ng-deep {
  .mat-content {
    display: inline !important;
    text-align: center;
  }
  .node circle {
    fill: #fff;
    stroke: #37474f;
    stroke-width: 1.5px;
  }

  .node circle:hover {
    fill: #37474f;
    cursor: pointer;
  }

  .node {
    font: 11px sans-serif;
    fill: gray;
  }

  .highlighted {
    fill: #37474f !important;
    stroke: #666 !important;
    stroke-width: 2px !important;
  }

  .link {
    fill: none;
    stroke: #ccc;
    stroke-width: 1.5px;
  }

  .rectLabel {
    fill: transparent;
    opacity: 1;
  }

  .textLabel {
    fill: #000;
  }

  .legend-label {
    font-size: 12px;
  }

  .d3-tip {
    line-height: 1;
    font-weight: bold;
    padding: 12px;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 2px;
    z-index: 1;
  }
}

mat-card {
  height: 100%;
}

.sample-list {
  padding: 15px 0;
}

.sample-list__item:not(:last-child):after {
  content: ', ';
}

.status-txt {
  color: #75c075;
  padding: 5px 0;
}

.example-form-field {
  width: 200px;
}
.searchField{
  padding: 0;
}

.toogleGroup{
  margin-left: 30px;
}

